# lang-kek

./: .glottologid.txt  .swp  CITATION.cff  Links.jspwiki  Links.md  Makefile.in  README  README.markdown  README.md  _config.yml  analyser-gt-desc.hfst.att  autogen.sh  configure.ac  functions-cg3-src.md  giella-kek.pc.in  grammarchecker-grammarcheckers-tools.md  index-header.md  index.md  kek.md  manifest.toml  manifest.toml.in  phonology-fst-src.md  src-cg3-functions.cg3.md  src-fst-morphology-phonology.twolc.md  src-fst-phonetics-txt2ipa.xfscript.md  src-fst-phonology.twolc.md  src-fst-transcriptions-transcriptor-abbrevs2text.lexc.md  src-fst-transcriptions-transcriptor-numbers-digit2text.lexc.md  src-fst-transcriptions-transcriptor-symbols2text.lexc.md  src-phonetics-txt2ipa.xfscript.md  src-transcriptions-transcriptor-abbrevs2text.lexc.md  src-transcriptions-transcriptor-numbers-digit2text.lexc.md  tools-grammarcheckers-grammarchecker.cg3.md  tools-tokenisers-tokeniser-disamb-gt-desc.pmscript.md  tools-tokenisers-tokeniser-gramcheck-gt-desc.pmscript.md  tools-tokenisers-tokeniser-tts-cggt-desc.pmscript.md  transcriptor-abbrevs2text-transcriptions-src.md  transcriptor-abbrevs2text.md  transcriptor-numbers-digit2text-transcriptions-src.md
.gut/: delta.toml  manifest.toml
doc/: index.xml  preamble.jspwiki  site.xml  tabs.xml
docs/: _config.yml  index-header.md  index.md  kek.jspwiki  kek.md  language-map.md  link-header.jspwiki  link-header.md  preamble.jspwiki  root-morphology.jspwiki  root-morphology.md  site.xml  tabs.xml
docs/badgedata/: speller-suggestions.json
m4/: giella-config-files.m4
src/cg3/: disambiguator.cg3
src/fst/: Makefile.am  phonology.twolc  root.lexc  root.lexd
src/fst/affixes/: adjectives.lexc  determiners.lexd  nouns.lexc  nouns.lexd  prefix.lexc  pronouns.lexd  propernouns.lexc  suffix.lexc  verbs.lexc  verbs.lexd
src/fst/morphology/: Makefile.am  phonology.twolc
src/fst/morphology/affixes/: pronouns.lexd  verbs.lexd
src/fst/morphology/stems/: numbers.lexd  prepositions.lexd  proper_nouns.lexd
src/fst/morphology/test/: Makefile.am  generate-adjective-lemmas.sh.in  generate-noun-lemmas.sh.in  generate-verb-lemmas.sh.in
src/fst/stems/: adjectives.lexc  adjectives.lexd  adverbs.lexc  adverbs.lexd  conjunctions.lexd  determiners.lexc  interrogatives.lexc  interrogatives.lexd  nouns.lexc  nouns.lexd  numbers.lexd  numerals.lexc  particles.lexd  prefixes.lexc  prepositions.lexc  prepositions.lexd  pronouns.lexc  pronouns.lexd  proper_nouns.lexd  toponyms.lexd  verbs.lexc  verbs.lexd
src/fst/test/: Makefile.am  run-lexicon-yaml-testcases.sh
src/fst/test/gt-desc-yamls/: classiinouns_gt-desc.ana.yaml  intransitive_gt-desc.ana.yaml  transitivevi_gt-desc.ana.yaml
src/fst/test/lexicon-yamls/: intransitive_lexicon.gen.yaml
src/fst/transcriptions/: transcriptor-abbrevs2text.lexc  transcriptor-symbols2text.lexc
src/morphology/affixes/: adjectives.lexc  nouns.lexc  propernouns.lexc
src/morphology/stems/: adjectives.lexc  verbs.lexc
src/orthography/: spellrelax.regex
src/phonology/: kek-phon.twolc
test/src/: Makefile.am  run-lexicon-yaml-testcases.sh
test/src/gt-desc-yamls/: BringhurstCh9_gt-desc.ana.yaml  classiinouns_gt-desc.ana.yaml  intransitive_gt-desc.ana.yaml  jolom_gt-desc.ana.yaml  mesun_gt-desc.ana.yaml  pronouns_gt-desc.ana.yaml  (+4 more)
tools/analysers/: pipeline.ts
tools/grammarcheckers/: errors-kek.ftl  index.xml  pipeline.ts
tools/shellscripts/: Makefile.am
tools/spellcheckers/: Makefile.mod-mobile-hfst.am  index.mobile.xml  index.xml
tools/tokenisers/: tokeniser-disamb-gt-desc.pmscript  tokeniser-gramcheck-gt-desc.pmscript
tools/tts/: acro2text.regex  pipeline.ts  text2phontext.regex
(+8 files in other folders)
